# carnot

./: .gitignore  README.md  agent-indices.py  b-tree-demo.py  clear_context_cache.py  email_demo.py  email_demo_routing.py  inspect_cluster.py  matching_files.py  pyproject.toml  test_output.txt  test_progress_tracking.py
.github/workflows/: deploy-k8s.yaml  deploy-to-aws.yaml
app/: index.html  privacy-statement.md  terms-of-service.md
app/backend/: requirements.txt
app/backend/alembic/: env.py
app/backend/app/: auth.py  database.py  env.py  main.py  security.py
app/frontend/: nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/frontend/src/: App.jsx  main.jsx
baseline_quest/: analyze_varying_k.py  config.yaml  decompose_retrieve.py  index_documents.py  semantic_retrieval.py  vector_similarity.py
baseline_quest/lib/: analyze_retrieval_results.py  chroma_utils.py  decomposition_executor.py  decomposition_generator.py  retrieval_analyzer.py  retriever.py
baseline_quest/past_code/decompose/: analyze_decomposer.py  execute_decompositions.py  generate_decompositions.py  retrieve.py
baseline_quest/past_code/indexing/: create_chroma.py  index_chroma.py
baseline_quest/past_code/semantic_retrieval/: analyze_retriever.py  retrieve.py
baseline_quest/past_code/vector_similarity/: README.md  vector_similarity.py
deploy/: MIGRATION_GUIDE.md  bootstrap_cluster.sh  generate_migration.sh  k8s-README.md  start_local.sh  trace1.txt
deploy/compose/: Dockerfile-backend  Dockerfile-frontend  docker-compose.local.yaml  docker-compose.yaml
deploy/helm/carnot/: Chart.yaml  values-at-prod.yaml  values-dev.yaml  values-lm-prod.yaml  values-wl-prod.yaml  values.yaml
deploy/helm/cluster-config/: Chart.yaml
deploy/terraform/eks/: addons.tf  backend.tf  iam.tf  main.tf  outputs.tf  variables.tf
deploy/terraform/env/: main.tf  variables.tf
deploy/terraform/global/: main.tf  outputs.tf
evals/browsercomp-plus/: build_indices.py  create_corpus.py  eval_indices.py  plot_browsecomp.py  qdt_probe_prompt.yaml  qdt_retrieval.py  qrel_parsing.py  test.py
evals/quest/: build_indices.py  create_corpus.py  create_graph.py  eval.py  eval_indices.py
evals/sembench/: run.py
evals/sembench/evaluator/: generic_evaluator.py
evals/sembench/runner/: generic_runner.py
src/carnot/: __init__.py  config.py  query_processor_factory.py
src/carnot/agents/: __init__.py  agent_types.py  base.py  data_discovery.py  default_tools.py  local_python_executor.py  memory.py  models.py  monitoring.py  planner.py  tools.py  utils.py
src/carnot/conversation/: conversation.py
src/carnot/core/: models.py
src/carnot/data/: dataset.py  item.py  logical_dataset.py
src/carnot/execution/: execution.py  execution_strategy.py  parallel_execution_strategy.py  progress.py  rich_progress.py
src/carnot/index/: __init__.py  hierarchical.py  hierarchical_types.py  index.py  models.py  persistence.py  sem_indices.py  sem_indices_cache.py  smv.py  smv_generator.py  summary_indices.py  summary_layer.py
src/carnot/memory/: memory.py
src/carnot/operators/: __init__.py  code.py  filter.py  limit.py  logical.py  merge.py  physical.py  reasoning.py  scan.py  sem_agg.py  sem_filter.py  sem_flat_map.py  sem_groupby.py  sem_join.py  sem_map.py  sem_topk.py  sql.py
src/carnot/optimizer/: __init__.py  cost_model.py  model_ids.py  optimizer.py  pricing.py  primitives.py  rules.py  tasks.py
src/carnot/plan/: __init__.py  feedback.py  logical.py  node.py  physical.py  physical_plan.py
src/carnot/storage/: __init__.py  backend.py  catalog.py  config.py  models.py  parsers.py  tiered.py
src/carnot/utils/: hash_helpers.py  (+3 more)
tests/pytest/: TEST_SUITE.md  conftest.py  test_catalog.py  test_code_operator.py  test_conversation_integration.py  test_conversation_planning.py  test_cost_model.py  test_data_model.py  test_e2e_query_lifecycle.py  test_e2e_sem_topk.py  test_e2e_stats_assembly.py  test_execution_unit.py  test_feedback.py  test_filter_topk_rule.py  test_index.py  test_logical_planning.py  test_operator_stats_mocked.py  test_optimizer_cost.py  test_optimizer_scan.py  test_physical_plan.py  test_planner_mocked.py  test_sem_agg_mocked.py  test_sem_agg_operator.py  test_sem_filter_mocked.py  test_sem_filter_operator.py  test_sem_flat_map_mocked.py  test_sem_flat_map_operator.py  test_sem_groupby_mocked.py  test_sem_groupby_operator.py  test_sem_join_mocked.py  test_sem_join_operator.py  test_sem_map_mocked.py  test_sem_map_operator.py  test_sem_topk_mocked.py  test_sem_topk_operator.py  test_stats_models.py  test_storage_backends.py  test_summary_layer.py
(+227 files in other folders)
